--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,13 @@
 
 html{
-  background: repeating-conic-gradient( from 346deg at 25% 25%, rgba(56, 136, 56, 0.109), rgb(42 37 65 / 11%) 2deg 5deg, rgb(60 86 60 / 85%), rgb(131 131 58 / 58%) 15deg17deg, rgba(31, 51, 31, 0.233) 20deg) #080606ec no-repeat;
-  backdrop-filter: brightness(0.1) blur(55px) hue-rotate(251deg);
+ /* background: repeating-conic-gradient( from 346deg at 25% 25%, rgba(56, 136, 56, 0.109), rgb(42 37 65 / 11%) 2deg 5deg, rgb(60 86 60 / 85%), rgb(131 131 58 / 58%) 15deg17deg, rgba(31, 51, 31, 0.233) 20deg) #080606ec no-repeat;
+  */
+
   margin: 0px;
   height: 100%;
+  width: 100%;
+  padding: 0px; 
+  backdrop-filter: brightness(0.1) blur(55px) hue-rotate(251deg);
 
 }
 
@@ -12,15 +16,21 @@ body {
   font-family: Arial;
 }
 
-html, #b1, .wrapper {
-  height: 100%;
+html, #b1 {
+  height: 100vh;
+  width:  100vh;
   margin: 0px;
   min-height: 1250px;
+  background: repeating-linear-gradient(45deg, rgb(17, 22, 17), rgb(18, 22, 17) 125px);
+
 }
 
+
+
 #b1{
-background: repeating-conic-gradient( from 346deg at 25% 25%, rgb(191 199 153 / 10%), rgb(29 29 34 / 32%) 2deg 5deg, rgb(19 27 17 / 98%), rgb(16 68 50 / 43%) 15deg 47deg, rgb(0 0 0 / 45%) 20deg) #232c3b8f no-repeat;
-backdrop-filter: brightness(0.11) blur(15px) hue-rotate(290deg);
+/* background: repeating-conic-gradient( from 346deg at 25% 25%, rgb(191 199 153 / 10%), rgb(29 29 34 / 32%) 2deg 5deg, rgb(19 27 17 / 98%), rgb(16 68 50 / 43%) 15deg 47deg, rgb(0 0 0 / 45%) 20deg) #232c3b8f no-repeat;
+*/
+backdrop-filter: brightness(0.11) blur(15px) hue-rotate(290deg); 
 color: snow;
 margin: 0px;
 min-height: 1100px;
@@ -31,6 +41,7 @@ min-height: 1100px;
 button, input {
   font-size: 100%;
   font-family: Arial;
+  margin-top: 3px;
 }
 
 table {
@@ -41,7 +52,7 @@ td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
-  background-color: #00000066;
+  background-color: #00000054;
 }
 
 
@@ -61,11 +72,11 @@ td, th {
 
 .total {
   font-size: 150%;
-  text-decoration: underline;
 }
 
 .form {
-  margin-top: 25px;
+  margin-top: 10px;
+  margin-left: 10px;
   width: 100%;
 }
 
@@ -75,11 +86,18 @@ td, th {
   overflow: auto;
   width: 90%;
   margin: 0 auto;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 0 6px 1px;
 }
 
 
 #myChart {
   margin-top: 35px;
-  background-color: #6d6b6b29;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: #6d6b6b2b;
+  background:  linear-gradient(45deg, rgb(21, 27, 21), rgb(21, 23, 27) 55px) rgba(255, 0, 0, 0.294);
+  backdrop-filter: hue-rotate(90deg);
+  box-shadow: rgba(0, 0, 0, 0.37) 0 0 6px 1px;
+
 }
 
