--- a/public/styles.css
+++ b/public/styles.css
@@ -1,29 +1,27 @@
 
 html{
- /* background: repeating-conic-gradient( from 346deg at 25% 25%, rgba(56, 136, 56, 0.109), rgb(42 37 65 / 11%) 2deg 5deg, rgb(60 86 60 / 85%), rgb(131 131 58 / 58%) 15deg17deg, rgba(31, 51, 31, 0.233) 20deg) #080606ec no-repeat;
-  */
+ background: repeating-conic-gradient( from 346deg at 25% 25%, rgba(56, 136, 56, 0.109), rgb(42 37 65 / 11%) 2deg 5deg, rgb(60 86 60 / 85%), rgb(131 131 58 / 58%) 15deg17deg, rgba(31, 51, 31, 0.233) 20deg) #080606ec no-repeat;
+  
 
   margin: 0px;
   height: 100%;
   width: 100%;
   padding: 0px; 
   backdrop-filter: brightness(0.1) blur(55px) hue-rotate(251deg);
-
 }
 
 body {
-  font-size: 120%;
-  font-family: Arial;
+  font-size: 110%;
 }
 
-html, #b1 {
+/* html, #b1 {
   height: 100vh;
   width:  100vh;
   margin: 0px;
   min-height: 1250px;
   background: repeating-linear-gradient(45deg, rgb(17, 22, 17), rgb(18, 22, 17) 125px);
 
-}
+} */
 
 
 
@@ -106,5 +104,36 @@ td, th {
   background: linear-gradient(359deg, rgb(27 27 27 / 10%), rgb(31 31 31), rgb(27 27 27 / 10%), rgb(31 31 31) 680px);
   box-shadow: rgb(75 75 75 / 13%);
   backdrop-filter: hue-rotate(357deg);
+  border: rgba(255, 255, 255, 0.231) solid 2px;
+  padding: 5px;
 }
+#add-btn, #sub-btn{
+	margin-top: .5rem;
+}
+
+
+::-webkit-scrollbar {
+	width: 20px;
+}
+
+::-webkit-scrollbar-track {
+	border-radius: 1px;
+	background-color: whitesmoke;
+	box-shadow: inset 0 0 6px rgba(112, 128, 144, 0.25);
+	border: black solid 2px;
+	margin: 0;
+	margin-left: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: white;
+	border: black solid 2px;
+	border-radius: 1px;
+	box-shadow: inset 0 0 6px rgba(112, 128, 144, 0.25);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: darkgrey;
+}
+
 
